<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="androidsamples.java.tictactoe.DashboardFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DashboardFragment">


  <TextView
      android:id="@+id/txt_player_dash_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="@string/player_id_dashboard_text"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintBottom_toTopOf="@+id/guideline2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.677" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.18" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.38" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/list"
      android:layout_width="386dp"
      android:layout_height="418dp"
      android:layout_marginLeft="34dp"

      android:layout_marginBottom="16dp"
      app:layoutManager="LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline3"
      tools:listitem="@layout/fragment_item">

  </androidx.recyclerview.widget.RecyclerView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_new_game"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/text_margin"
      android:contentDescription="@string/new_game"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:srcCompat="@android:drawable/ic_input_add" />

  <TextView
      android:id="@+id/txt_loss_label"
      android:layout_width="63dp"
      android:layout_height="29dp"
      android:layout_marginTop="24dp"
      android:gravity="center"
      android:text="@string/txt_loss_label"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/txt_loss"
      app:layout_constraintHorizontal_bias="0.535"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_win_label" />

  <TextView
      android:id="@+id/txt_draw_label"
      android:layout_width="63dp"
      android:layout_height="29dp"
      android:layout_marginTop="24dp"
      android:gravity="center"
      android:text="@string/txt_draw_label"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline3"
      app:layout_constraintEnd_toStartOf="@+id/txt_draw"
      app:layout_constraintHorizontal_bias="0.537"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_loss_label"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/txt_win"
      android:layout_width="63dp"
      android:layout_height="29dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="60dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline2" />

  <TextView
      android:id="@+id/txt_draw"
      android:layout_width="63dp"
      android:layout_height="29dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="60dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_loss"
      app:layout_constraintVertical_bias="0.428" />

  <TextView
      android:id="@+id/txt_loss"
      android:layout_width="63dp"
      android:layout_height="29dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="60dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_win" />

  <TextView
      android:id="@+id/txt_win_label"
      android:layout_width="63dp"
      android:layout_height="29dp"
      android:layout_marginTop="4dp"
      android:gravity="center"
      android:text="@string/txt_win_label"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/txt_win"
      app:layout_constraintHorizontal_bias="0.526"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>